--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ input:focus {
     margin-bottom: 35px;
 }
 
-.hebergements-and-populaires section {
+.populaires, .hebergements {
     background-color: var(--main-bg-color);
     border-radius: 20px;
     padding: 30px;
@@ -328,7 +328,6 @@ input:focus {
 
 .activites-cards {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 30px;
 }
@@ -342,6 +341,7 @@ input:focus {
     height: 439px;
     display: flex;
     flex-direction: column;
+    padding: 0;
 }
 
 .activites-cards img {
@@ -362,14 +362,6 @@ input:focus {
 .activites-cards .card-title {
     margin-top: 10px;
     margin-bottom: 4px;
-}
-
-.activites-cards .card-subtitle {
-    margin: 0;
-}
-
-.activites-cards .card-rating {
-    margin-bottom: 5px;
 }
 
 /****** Footer ***********/
@@ -417,14 +409,6 @@ footer {
 
     .populaires-cards a {
         width: 30%;
-    }
-
-    .populaires-cards .card-title {
-        font-size: 14px;
-    }
-
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
     }
 
     .activites-cards .card {
@@ -512,5 +496,84 @@ footer {
 
     .filtre-button {
         width: calc(50% - 5px);
+    }
+
+    /****** Hebergements And Populaires ***********/
+    .hebergements-and-populaires {
+        flex-direction: column-reverse;
+    }
+
+    /****** Populaires ***********/
+    .populaires {
+        margin-top: 0;
+        border-radius: 0;
+        padding: 30px 20px;
+    }
+
+    .populaires-cards {
+        display: block;
+    }
+
+    .populaires-cards .card {
+        margin-top: 15px;
+    }
+
+    /****** Hebergements ***********/
+    .hebergements {
+        margin-top: 15px;
+        background-color: white;
+        border-radius: 0;
+        padding: 20px;
+    }
+
+    .hebergement-cards {
+        flex-direction: column;
+        gap: 15px;
+        margin: 15px 0;
+    }
+
+    .hebergement-cards a {
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    /****** Activités ***********/
+    .activites-cards {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .activites-cards a {
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    .activites-cards .card {
+        height: 200px;
+    }
+
+    .activites-cards img {
+        height: 141px;
+    }
+
+    .activites-cards .card-content {
+        height: 59px;
+    }
+
+    /****** Footer ***********/
+    footer {
+        padding: 30px;
+        margin-top: 35px;
+    }
+
+    #footer-nav {
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .footer-section {
+        padding: 0;
+        width: 100%;
+        gap: 15px;
     }
 }
