--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ a {
 
 .card-title {
     font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 4px;
 }
 
 .euro {
@@ -142,6 +144,7 @@ input:focus {
 }
 
 .form-submit {
+    border: none;
     background-color: var(--main-color);
     color: white;
     height: 100%;
@@ -150,6 +153,7 @@ input:focus {
 
 .form-submit-logo {
     display: none;
+    border: none;
     font-family: FontAwesome;
     background-color: var(--main-color);
     color: white;
@@ -184,6 +188,7 @@ input:focus {
     background-color: white;
     border: solid 2px #D9D9D9;
     border-radius: 25px;
+    cursor: pointer;
 }
 
 .filtre-button i {
@@ -245,9 +250,9 @@ input:focus {
 }
 
 .hebergement-cards .card {
-    height: 207.25px;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .hebergement-cards img {
@@ -262,11 +267,6 @@ input:focus {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.hebergement-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
 }
 
 .hebergement-cards .card-subtitle {
@@ -306,11 +306,6 @@ input:focus {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.populaires-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
 }
 
 .populaires-cards .card-subtitle {
@@ -359,11 +354,6 @@ input:focus {
     justify-content: center; 
 }
 
-.activites-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
-}
-
 /****** Footer ***********/
 footer {
     background-color: var(--main-bg-color);
@@ -388,6 +378,19 @@ footer {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+    .filtres {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .choix {
+        gap: 9px;
+    }
+    
+    .filtre-button {
+        padding: 4px 17px 4px 17px;
+    }
+    
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -425,7 +428,7 @@ footer {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .main-container {
         padding: 0;
     }
@@ -450,7 +453,7 @@ footer {
         display: flex;
         justify-content: center;
         border-top: none;
-        border-bottom: solid rgba(0, 0, 0, 0) 2px;
+        border-bottom: solid var(--main-bg-color) 2px;
     }
     
     #main-nav a:hover {
@@ -481,21 +484,19 @@ footer {
     }
 
     /****** Filtres ***********/
-    .filtres {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
     .choix {
         flex-wrap: wrap;
         justify-content: space-between;
         gap: 0;
+        width: 100%;
         height: 120px;
         align-content: space-between;
     }
 
     .filtre-button {
         width: calc(50% - 5px);
+        padding-left: 0;
+        padding-right: 0;
     }
 
     /****** Hebergements And Populaires ***********/
